--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Siddik-Bot
  
 on:
   push:
@@ -8,20 +8,21 @@ on:
  
 jobs:
   build:
- 
- 
     runs-on: ubuntu-latest
  
-    strategy:
-      matrix:
-        node-version: [20.x]
-        
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm start
+      - name: Checkout code
+        uses: actions/checkout@v3
  
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+ 
+      - name: Install dependencies
+        run: npm install
+ 
+      - name: Siddik-Bot
+        run: npm start
+
+        
